Bug 309852 - Presence applet has 16x16 size in system tray
Summary: Presence applet has 16x16 size in system tray
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: presence-applet (other bugs)
Version First Reported In: 0.5.0
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-10 12:09 UTC by Kai Uwe Broulik
Modified: 2013-03-09 19:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
System tray (11.68 KB, image/png)
2012-11-10 12:10 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2012-11-10 12:09:35 UTC
The presence applet has a size of 16x16 in my system tray making it really hard to spot, especially since the other icons are all 24x24 like they should be.

Reproducible: Always
Comment 1 Kai Uwe Broulik 2012-11-10 12:10:15 UTC
Created attachment 75150 [details]
System tray
Comment 2 David Edmundson 2013-03-09 19:26:44 UTC
Git commit d5940e72562fc2f9ffac6b033e4826729b5f5577 by David Edmundson.
Committed on 08/03/2013 at 18:52.
Pushed by davidedmundson into branch 'master'.

Don't add pointless margin to presence applet

Makes icon appear the same size as other icons in sys-tray
Remove duplicate setMinimumSize

REVIEW:109375

M  +1    -2    presence/src/presence-applet.cpp

http://commits.kde.org/telepathy-contact-applet/d5940e72562fc2f9ffac6b033e4826729b5f5577