Don't add pointless margin to presence applet

Makes icon appear the same size as other icons in sys-tray
Remove duplicate setMinimumSize

REVIEW:109375
BUG: 309852